styles.css
/* ... */
::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0,0.3);
}

::-webkit-scrollbar-thumb {
	background: rgba(255,255,255,1);
}

a:not(.fa) {
  color: var(--pre-primary-color);

  h3 & {
    color: var(--primary-color);
  }

  &:hover {
    color: var(--pre-primary-color);
  }
}

h3 {
  border: 1px solid var(--primary-color);
  border-radius: 2px;
  width: fit-content;
  padding: 6px 12px;

  a {
    text-decoration: none;
  }

  .fa {
    margin-left: 8px;
    font-size: 18px;
  }
}

.container {
  display: flex;
  /** This gets overriden once the videos have loaded. */
  opacity: 0;

  transition: all 0.5s ease;
  overflow: hidden;
  height: 100%;
  flex: 1 1 0;
  flex-direction: row;
  width: 60vw;
  background-color: var(--secondary-color);

  content: '';
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;

  @media (prefers-color-scheme: light) {
    background-image: url('images/light-background.jpg');
  }

  @media (prefers-color-scheme: dark) {
    background-image: url('images/dark-background.jpg');
  }
}

.hidden-on-mobile {
  @media screen and (max-width: 767px) {
    display: none !important;
  }
}

.left-options {
  flex: 0 0 0;
  position: relative;
  pointer-events: none;

  display: flex;
  flex-direction: column;
  align-items: end;
  justify-content: center;
  overflow-y: clip;
  z-index: 3;

  perspective: 180px;
  margin-left: 20vw;

  .option {
    height: 10vh;
    width: max-content;
    font-size: clamp(3rem, 10vh, 10rem);
    line-height: clamp(3rem, 10vh, 10rem);
    pointer-events: auto;
    outline: none;


    /** Controls the xy position of the option */
    transition: transform var(--base-transition-duration) ease-in;
    cursor: pointer;

    &:focus .focus-only-background {
      /** Hack to allow the background to overflow the mask */
      pointer-events: none;
      padding: 10vw;
      margin: -10vw;

      background-image: url(images/masks0.png);
      background-color: transparent;
      background-repeat: no-repeat;
      background-size: cover;
      background-position-x: center;
      background-position-y: calc(50% + 6vh);
    }
  }

  .option:nth-of-type(1) {
    margin-top: 10vh;
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 10vh;
    rotate: z 23deg;
  }
  .option:nth-of-type(2) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    rotate: z 16deg;
  }
  .option:nth-of-type(3) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    margin-right: 10vw;
    rotate: z 12deg;
  }
  .option:nth-of-type(4) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    margin-right: 12vw;
    rotate: z 4deg;
  }
  .option:nth-of-type(5) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 3vh;
    margin-right: 14vw;
    rotate: z -2deg;
  }
  .option:nth-of-type(6) {
    transform: rotate3d(0, -1, 0, -5deg);
    margin-top: 2vh;
    margin-right: 9vw;
    rotate: z -6deg;
  }

  span {
    text-transform: uppercase;
    text-shadow: 4px 4px 1px black;
    color: var(--primary-color);
  
    font-family: 'Space Mono', monospace;
    font-weight: 500;
    cursor: pointer;

    transition: none;
  }
  
  @media screen and (max-width: 767px) {
    margin-top: 32px;
    margin-left: 10vw;
    align-items: flex-start;
    justify-content: flex-start;

    .option.option {
      height: 2em;
      font-size: 2em;
      line-height: 2em;
      rotate: z 0deg;
      margin-top: 0;
      margin-right: 0;
      transform: none;

      .focus-only-background {
        padding: 15vh;
        margin: -15vh;
        background-size: 80vw 15vh;
        background-position-y: 12vh;
      }
    }
  }
}
/* ... */

